shutdown_b904.txt
src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:171:1: SyntaxError: Expected `except` or `finally` after `try` block
    |
169 |             # Phase 6: Complete
170 |             self._update_progress(request, 100, "Shutdown complete", ShutdownPhase.COMPLETED)
171 | response.result = (
    | ^
172 |     ShutdownResult.SUCCESS if not response.warnings else ShutdownResult.PARTIAL_SUCCESS)
173 |             response.current_phase = ShutdownPhase.COMPLETED
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:173:1: SyntaxError: Unexpected indentation
    |
171 | response.result = (
172 |     ShutdownResult.SUCCESS if not response.warnings else ShutdownResult.PARTIAL_SUCCESS)
173 |             response.current_phase = ShutdownPhase.COMPLETED
    | ^
174 |             response.completed_phases.append(ShutdownPhase.COMPLETED)
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:181:1: SyntaxError: unindent does not match any outer indentation level
    |
179 |             return response
180 |             
181 |         except Exception as e:
    | ^
182 |             return self._create_error_response(f"Unexpected shutdown error: {e!s}", response, e)
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:181:9: SyntaxError: Expected a statement
    |
179 |             return response
180 |             
181 |         except Exception as e:
    |         ^
182 |             return self._create_error_response(f"Unexpected shutdown error: {e!s}", response, e)
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:181:26: SyntaxError: Expected a statement
    |
179 |             return response
180 |             
181 |         except Exception as e:
    |                          ^
182 |             return self._create_error_response(f"Unexpected shutdown error: {e!s}", response, e)
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:181:31: SyntaxError: Expected an expression
    |
179 |             return response
180 |             
181 |         except Exception as e:
    |                               ^
182 |             return self._create_error_response(f"Unexpected shutdown error: {e!s}", response, e)
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:182:1: SyntaxError: Unexpected indentation
    |
181 |         except Exception as e:
182 |             return self._create_error_response(f"Unexpected shutdown error: {e!s}", response, e)
    | ^
183 |     
184 |     def _save_application_state(self,
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:184:1: SyntaxError: unindent does not match any outer indentation level
    |
182 |             return self._create_error_response(f"Unexpected shutdown error: {e!s}", response, e)
183 |     
184 |     def _save_application_state(self,
    | ^
185 |     request: ShutdownApplicationRequest, response: ShutdownApplicationResponse,
186 |     ) -> bool:
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:209:5: SyntaxError: unindent does not match any outer indentation level
    |
207 |             return False
208 |     
209 |     def _stop_workers(self, request: ShutdownApplicationRequest, response: ShutdownApplicationResponse,
    |     ^
210 |     ) -> bool:
211 |         """Stop all running workers."""
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:242:5: SyntaxError: unindent does not match any outer indentation level
    |
240 |             return False
241 |     
242 |     def _cleanup_resources(self, request: ShutdownApplicationRequest, response: ShutdownApplicationResponse,
    |     ^
243 |     ) -> bool:
244 |         """Cleanup application resources."""
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:273:5: SyntaxError: unindent does not match any outer indentation level
    |
271 |             return False
272 |     
273 |     def _close_connections(self, request: ShutdownApplicationRequest, response: ShutdownApplicationResponse,
    |     ^
274 |     ) -> bool:
275 |         """Close network connections and sockets."""
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:294:5: SyntaxError: unindent does not match any outer indentation level
    |
292 |             return False
293 |     
294 |     def _finalize_shutdown(self, request: ShutdownApplicationRequest, response: ShutdownApplicationResponse,
    |     ^
295 |     ) -> bool:
296 |         """Finalize the shutdown process."""
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:321:5: SyntaxError: unindent does not match any outer indentation level
    |
319 |             return False
320 |     
321 |     def _force_immediate_shutdown(self,
    |     ^
322 |     request: ShutdownApplicationRequest, response: ShutdownApplicationResponse,
323 |     ) -> ShutdownApplicationResponse:
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:346:5: SyntaxError: unindent does not match any outer indentation level
    |
344 |             return self._create_error_response(f"Force shutdown failed: {e!s}", response, e)
345 |     
346 |     def _update_progress(
    |     ^
347 |         self, 
348 |         request: ShutdownApplicationRequest, 
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:359:5: SyntaxError: unindent does not match any outer indentation level
    |
357 |             request.progress_callback(percentage, message, phase)
358 |     
359 |     def _create_error_response(
    |     ^
360 |         self, 
361 |         error_message: str, 
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:378:1: SyntaxError: unindent does not match any outer indentation level
    |
376 |         return response
377 |     
378 |     def get_current_phase(self) -> ShutdownPhase:
    | ^
379 |         """Get the current shutdown phase."""
380 |         return self.current_phase
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:382:1: SyntaxError: unindent does not match any outer indentation level
    |
380 |         return self.current_phase
381 |     
382 |     def emergency_shutdown(self, application: ApplicationProtocol,
    | ^
383 |     ) -> None:
384 |         """Emergency shutdown for critical situations."""
    |

src_refactored\application\application_lifecycle\use_cases\shutdown_application_use_case.py:397:24: SyntaxError: Expected dedent, found end of file
    |
395 |         except Exception:
396 |             # Last resort
397 |             sys.exit(1)
    |                        ^
    |

Found 18 errors.
